Fix #102687: Use Proper Style for Label Length Estimation

When estimating widget sizes, ui_text_icon_width_ex() assumes that all
items are using the "widget" text style, which is incorrect for labels.
This PR uses widget_label style for uiItemL_ and the label portion of
ui_item_with_label.

Pull Request: https://projects.blender.org/blender/blender/pulls/111908